<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/topBar"
        layout="@layout/layout_barra_arriba"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvAjustesTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajustes_titulo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/tvEstadoCuidador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_has_iniciado_sesi_n_como_cuidador"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvAjustesTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btnTutorial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tutorial_ver_btn"
        app:layout_constraintTop_toBottomOf="@id/tvEstadoCuidador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnLoginCuidador"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion_cuidador_btn"
        app:layout_constraintTop_toBottomOf="@id/btnTutorial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnRegistroCuidador"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registrarse_cuidador_btn"
        app:layout_constraintTop_toBottomOf="@id/btnLoginCuidador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/btnLogoutCuidador"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_sesion_btn"
        app:layout_constraintTop_toBottomOf="@id/btnRegistroCuidador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="18dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnPapelera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/papelera_btn"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btnEliminarUsuarioCuidador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btnExportarGaleria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exportar_datos_btn"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btnPapelera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btnImportarGaleria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/importar_datos_btn"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btnExportarGaleria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btnEliminarUsuarioCuidador"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/eliminar_usuario_cuidador"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btnLogoutCuidador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btnCambiarIdioma"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_idioma"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btnImportarGaleria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp" />
</androidx.constraintlayout.widget.ConstraintLayout>